--- a/src/test_list_words.css
+++ b/src/test_list_words.css
@@ -1,9 +1,14 @@
 .span-word {
-    margin: 5% 15%;
-    width: 100%;
+    margin: 3% 24%;
 }
 .word {
     margin-left: 10px;
     font-size: 22px;
     font-family:  sans-serif;
+    width: 20%;
+
+}
+.sentence{
+    width: 107%;
+    font-size: 20px;
 }
