--- a/src/test_list_words.css
+++ b/src/test_list_words.css
@@ -1,14 +1,52 @@
+
 .span-word {
-    margin: 3% 24%;
+    margin: 2% 29%;
 }
-.word {
-    margin-left: 10px;
+.sentence-item {
+    /* margin-left: 10px;
     font-size: 22px;
     font-family:  sans-serif;
-    width: 20%;
+    width: 20%; */
+    margin-left: 10px;
+    /* color: var(--grey-ink04); */
+    /* border-radius: .25rem; */
+    /* padding: 2px 1px; */
+    /* -webkit-user-select: text; */
+    /* -moz-user-select: text; */
+    /* -ms-user-select: text; */
+    /* user-select: text; */
+    /* border-width: 0px; */
+    /* border-style: solid; */
+    /* border-color: rgba(0,0,0,0); */
+    /* cursor: pointer; */
+    display: inline-flex;
+    /* line-height: 1; */
+    /* position: relative; */
+    /* z-index: 1; */
+    /* align-items: baseline; */
+}
+
+.sentence-item {
+    /* width: 300px; */
+    border: 1px solid rgb(119, 72, 28);
+    padding: 2px;
+    /* margin: 20px; */
+    cursor: pointer;
+    position: relative;
+}
+
+.sentence{
+    /* width: 107%; */
+    font-size: 20px;
+    /* white-space: inherit; */
+    line-height: 2.1;
+    /* margin-right:  5rem; */
+    /* position: relative; */
 
 }
-.sentence{
-    width: 107%;
-    font-size: 20px;
+
+span {
+  font-style: inherit;
+  font-weight: inherit;
 }
+
