--- a/src/test_list_words.css
+++ b/src/test_list_words.css
@@ -28,7 +28,7 @@
 
 .sentence-item {
     /* width: 300px; */
-    border: 1px solid rgb(119, 72, 28);
+    /* border: 1px solid rgb(119, 72, 28); */
     padding: 2px;
     /* margin: 20px; */
     cursor: pointer;
